[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://assets/bgfruitninja.jpg" type="Texture" id=2]
[ext_resource path="res://scripts/inputProc.gd" type="Script" id=3]
[ext_resource path="res://assets/hud_vidas.png" type="Texture" id=4]
[ext_resource path="res://assets/font150.fnt" type="BitmapFont" id=5]
[ext_resource path="res://assets/guigo.png" type="Texture" id=6]

[sub_resource type="GDScript" id=2]

resource/name = "GameOver"
script/source = "extends Control

var pode = false


func _ready():
	set_process_input(true)

func _input(event):
	if event.type == InputEvent.SCREEN_TOUCH and pode:
		get_tree().reload_current_scene()
	
func start():
	show()
	get_node(\"Animation\").play(\"GameOver\")
	get_node(\"Timer\").start()

func _on_Timer_timeout():
	pode = true
	get_node(\"Label 2\").show()"

[sub_resource type="Animation" id=1]

resource/name = "GameOver"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="Game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

transform/scale = Vector2( 0.8, 0.6 )
texture = ExtResource( 2 )
centered = false

[node name="Fruits" type="Node2D" parent="."]

[node name="Generator" type="Timer" parent="."]

process_mode = 1
wait_time = 1.5
one_shot = false
autostart = true

[node name="InputProc" type="Node2D" parent="."]

editor/display_folded = true
script/script = ExtResource( 3 )

[node name="Inter" type="Timer" parent="InputProc"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="Limit" type="Timer" parent="InputProc"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Control" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="TextureFrame" type="TextureFrame" parent="Control"]

rect/scale = Vector2( 0.4, 0.4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 0.0
margin/right = 292.0
margin/bottom = 316.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="Label" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 148.0
margin/top = 8.0
margin/right = 227.0
margin/bottom = 138.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.333333, 0.643137, 0, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="bomb1" type="TextureFrame" parent="Control"]

rect/scale = Vector2( 0.05, 0.05 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1144.0
margin/top = 10.0
margin/right = 1244.0
margin/bottom = 110.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="bomb2" type="TextureFrame" parent="Control"]

rect/scale = Vector2( 0.05, 0.05 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1051.0
margin/top = 10.0
margin/right = 1151.0
margin/bottom = 110.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="bomb3" type="TextureFrame" parent="Control"]

rect/scale = Vector2( 0.05, 0.05 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 958.0
margin/top = 10.0
margin/right = 1058.0
margin/bottom = 110.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="GameOverScreen" type="Control" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = SubResource( 2 )

[node name="Label" type="Label" parent="GameOverScreen"]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 282.0
margin/top = 174.0
margin/right = 1008.0
margin/bottom = 304.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.737255, 0.0745098, 0.0784314, 1 )
custom_colors/font_color_shadow = Color( 0.0117188, 0.0102997, 0.0102997, 1 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
text = "GAME OVER"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label 2" type="Label" parent="GameOverScreen"]

visibility/visible = false
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 143.0
margin/top = 324.0
margin/right = 2198.0
margin/bottom = 454.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.737255, 0.0745098, 0.0784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
text = "Toque para jogar novamente"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Animation" type="AnimationPlayer" parent="GameOverScreen"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/GameOver = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Timer" type="Timer" parent="GameOverScreen"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[connection signal="timeout" from="Generator" to="." method="_on_Generator_timeout"]

[connection signal="timeout" from="InputProc/Inter" to="InputProc" method="_on_Inter_timeout"]

[connection signal="timeout" from="InputProc/Limit" to="InputProc" method="_on_Limit_timeout"]

[connection signal="timeout" from="GameOverScreen/Timer" to="GameOverScreen" method="_on_Timer_timeout"]


